--- a/Cs_LP_profile/style.css
+++ b/Cs_LP_profile/style.css
@@ -3,3 +3,42 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+li {
+  list-style: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.container {
+  width: 960px;
+  padding: 0 4%;
+  margin: 0 auto;
+}
+
+header .container {
+  height: 70px;
+  display: flex;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-head img {
+  height: 40px;
+  margin: 15px 0;
+}
+
+.right-head ul {
+  display: flex;
+  line-height: 70px;
+}
+
+.right-head li {
+  padding-left: 20px;
+}
