--- a/Cs_LP_profile/style.css
+++ b/Cs_LP_profile/style.css
@@ -42,3 +42,10 @@ header .container {
 .right-head li {
   padding-left: 20px;
 }
+
+.main-visual {
+  width: 100%;
+  height: 600px;
+  background-image: url(./img/mainvisual.jpg);
+  background-size: cover;
+}
