--- a/Cs_LP_photosite/style.css
+++ b/Cs_LP_photosite/style.css
@@ -5,26 +5,51 @@
 }
 
 body {
+  font-size: 0.9rem;
   background-color: #f4f9ff;
 }
 
 .container {
   width: 1000px;
   margin: 0 auto;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 header {
   margin-top: 60px;
-  height: 70px;
-  background-color: ;
+  /* height: 70px;
+  background-color: ; */
 }
 
 .head-logo {
-  width: 15%;
+  width: 160px;
+  margin-bottom: 10px;
 }
 
 .main-visual img {
   width: 100%;
-  max-width: 1000px;
+  /* max-width: 1000px; */
+}
+
+.index {
+  padding: 30px 0;
+  margin-top: 60px;
+  background-color: #fff;
+}
+
+.content {
+  width: 600px;
+  margin: 0 auto;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+ol {
+  margin-left: 20px;
+}
+
+li {
+  margin-bottom: 20px;
 }
