--- a/Cs_LP_recipe-top/css/style.css
+++ b/Cs_LP_recipe-top/css/style.css
@@ -8,11 +8,20 @@
 
 main {
   max-width: 100%;
+  text-align: center;
   font-family: "Helvetica Neue", Arial, "Hiragino Sans", Meiryo, sans-serif;
 }
 
 .main-visual img {
   width: 100%;
   height: 100vh;
-  object-fit: cover;
+  margin-bottom: 80px;
+}
+
+.text {
+  margin-bottom: 80px;
+}
+
+.title {
+  margin-bottom: 20px;
 }
