--- a/Cs_LP_recipe-cookery/css/style.css
+++ b/Cs_LP_recipe-cookery/css/style.css
@@ -60,3 +60,38 @@ h3 {
   margin-bottom: 7px;
   border-bottom: 1px dotted #c5c5c5;
 }
+
+.btn {
+  text-align: center;
+  width: 250px;
+  line-height: 65px;
+  margin: 0 auto 80px;
+  border: 1px solid #000;
+}
+
+.btn a {
+  font-size: 0.9rem;
+  text-decoration: none;
+  display: block;
+}
+
+a {
+  color: #000;
+}
+
+footer {
+  text-align: center;
+  font-size: 0.8rem;
+  padding: 20px;
+}
+
+.sns {
+  margin-bottom: 20px;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+.sns li {
+  padding: 0 10px;
+}
