--- a/Cs_LP_brand/css/style.css
+++ b/Cs_LP_brand/css/style.css
@@ -54,17 +54,17 @@ main {
   padding: 0 3%;
 }
 
-#concept {
+#concept, #work {
   margin-bottom: 60px;
   display: flex;
   align-items: center;
 }
 
-.con-leght {
+.con-leght, .work-right {
   width: 50%;
 }
 
-.con-right {
+.con-right, .work-leght {
   width: 50%;
   padding: 0 7%;
 }
