--- a/Cs_LP_brand/css/style.css
+++ b/Cs_LP_brand/css/style.css
@@ -29,7 +29,7 @@ a {
   color: #000;
 }
 
-.header-logo {
+.logo {
   width: 110px;
   margin-right: 50px;
   line-height: 1px;
@@ -77,4 +77,16 @@ main {
 .section-title-en {
   padding-bottom: 20px;
   font-size: 0.8em;
+}
+
+footer {
+  max-width: 1000px;
+  margin: 0 auto 20px;
+  padding: 0 3%;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer p {
+  font-size: 0.75em;
 }
