--- a/Cs_LP_portfolio/css/style.css
+++ b/Cs_LP_portfolio/css/style.css
@@ -23,7 +23,7 @@ img {
 }
 
 .container {
-  width: 960px;
+  max-width: 960px;
   padding: 0 4%;
   margin: 0 auto;
 }
@@ -57,4 +57,70 @@ header {
   width: 100%;
   height: 420px;
   object-fit: cover;
+}
+
+section {
+  padding-bottom: 100px;
+}
+
+.title {
+  font-size: 1.75em;
+  padding-bottom: 60px;
+  text-align: center;
+}
+
+.text p:nth-child(2) {
+  padding: 30px 0;
+}
+
+.images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.wo-image {
+  width: 30%;
+}
+
+.wo-image:nth-child(-n+3) {
+  padding-bottom: 20px;
+}
+
+.news {
+  padding: 15px;
+  border-top: 1px solid #bbbbbb;
+  display: flex;
+}
+
+.news:last-child {
+  border-bottom: 1px solid #bbbbbb;
+}
+
+.date {
+  padding-right: 80px;
+}
+
+dl {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+dt {
+  width: 15%;
+}
+
+dd {
+  width: 85%;
+  margin-bottom: 10px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #bbbbbb;
+}
+
+textarea {
+  padding: 50px;
 }
